Added slides 3-4 and non-linear dimension reduction examplet.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                 <div class="w3-padding-8"></div>
                 <h4>
-                    <table style="width:80%">
+                    <table style="width:90%">
                         <tr>
                             <th>Lecture</th>
                             <th>Topic</th>
@@ -155,7 +155,8 @@
                             <td>Dimensionality reduction</td>
                             <td>EDA</td>
                             <td>
-                                <a href="https://bcourses.berkeley.edu/files/69562758/download?download_frd=1">Slides</a>
+                                <a href="https://bcourses.berkeley.edu/files/69562758/download?download_frd=1">Slides 1</a>,
+                                <a href="https://bcourses.berkeley.edu/files/69582343/download?download_frd=1">Slides 2</a>
                             </td>
                         </tr>
 
@@ -359,8 +360,8 @@
                             <td>
                                 <a href="https://bcourses.berkeley.edu/files/69564167/download?download_frd=1">PCA</a>,
                                 <a href="https://bcourses.berkeley.edu/files/69564164/download?download_frd=1">MDS</a>,
-                                <a href="https://bcourses.berkeley.edu/files/69564166/download?download_frd=1">PCA vs. MDS</a>
-
+                                <a href="https://bcourses.berkeley.edu/files/69564166/download?download_frd=1">PCA vs. MDS</a>,
+                                <a href="https://bcourses.berkeley.edu/files/69582712/download?download_frd=1">Non-linear</a>
                             </td>
                             <td>
                                 <a href="https://bcourses.berkeley.edu/files/69478510/download?download_frd=1">Attributes</a>,
