--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
                             <td>6</td>
                             <td>Spatial databases II</td>
                             <td>Data Handling</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478491/download?download_frd=1">Slides</a>
+                            </td>
                         </tr>
 
                         <tr>
@@ -369,51 +372,60 @@
 
                             </td>
                         </tr>
-                    </table>
-                </h4>
 
-                <div class="w3-padding-8"></div>
-                <h2 class="w3-text-grey">Extra Readings</h2>
-                <h4>
-                    <ul>
-                        <li>
-                            <a href="https://bcourses.berkeley.edu/files/69478508/download?download_frd=1">Fask kmeans</a>
-                        </li>
-                        <li>
-                            <a href="https://bcourses.berkeley.edu/files/69478494/download?download_frd=1">Online kmeans</a>
-                        </li>
-                        <li>
-                            <a href="https://bcourses.berkeley.edu/files/69478492/download?download_frd=1">DBSCAN</a>
-                        </li>
-                    </ul>
-                </h4>
-                <div class="w3-padding-8"></div>
-                <h2 class="w3-text-grey">Course Grading</h2>
+                        <tr>
+                            <td>6</td>
+                            <td>Spatial databases</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69631773/download?download_frd=1">Querying Examples</a>,
+                                <a href="https://bcourses.berkeley.edu/files/69478535/download?download_frd=1">Shapely</a>
+                            </td>
+                            <td></tr>
+                        </table>
+                    </h4>
 
-                <h4>1 or 2 Midterms :
-                    <b>30%</b>
-                </h4>
-                <h4>Homework :
-                    <b>50%</b>
-                </h4>
-                <h4>Final Project :
-                    <b>20%</b>
-                </h4>
+                    <div class="w3-padding-8"></div>
+                    <h2 class="w3-text-grey">Extra Readings</h2>
+                    <h4>
+                        <ul>
+                            <li>
+                                <a href="https://bcourses.berkeley.edu/files/69478508/download?download_frd=1">Fask kmeans</a>
+                            </li>
+                            <li>
+                                <a href="https://bcourses.berkeley.edu/files/69478494/download?download_frd=1">Online kmeans</a>
+                            </li>
+                            <li>
+                                <a href="https://bcourses.berkeley.edu/files/69478492/download?download_frd=1">DBSCAN</a>
+                            </li>
+                        </ul>
+                    </h4>
+                    <div class="w3-padding-8"></div>
+                    <h2 class="w3-text-grey">Course Grading</h2>
+
+                    <h4>1 or 2 Midterms :
+                        <b>30%</b>
+                    </h4>
+                    <h4>Homework :
+                        <b>50%</b>
+                    </h4>
+                    <h4>Final Project :
+                        <b>20%</b>
+                    </h4>
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- Footer -->
-    <div class="w3-container w3-black w3-center w3-opacity w3-padding-32"></div>
+        <!-- Footer -->
+        <div class="w3-container w3-black w3-center w3-opacity w3-padding-32"></div>
 
-    <!-- Footer -->
+        <!-- Footer -->
 
-    <script>
-        // Used to toggle the menu on small screens when clicking on the menu button function myFunction() {     var x = document.getElementById("navDemo");     if (x.className.indexOf("w3-show") == -1) {         x.className += " w3-show";     } else {
-        // x.className = x.className.replace(" w3-show", "");     } }
-    </script>
+        <script>
+            // Used to toggle the menu on small screens when clicking on the menu button function myFunction() {     var x = document.getElementById("navDemo");     if (x.className.indexOf("w3-show") == -1) {         x.className += " w3-show";     } else {
+            // x.className = x.className.replace(" w3-show", "");     } }
+        </script>
 
-</body>
+    </body>
 </html>
 </li>
 </script>
