--- a/index.html
+++ b/index.html
@@ -389,14 +389,19 @@
                     <h4>
                         <ul>
                             <li>
-                                <a href="https://bcourses.berkeley.edu/files/69478508/download?download_frd=1">Fask kmeans</a>
+                                <a href="https://bcourses.berkeley.edu/files/69478508/download?download_frd=1">3 Fask kmeans</a>
                             </li>
                             <li>
-                                <a href="https://bcourses.berkeley.edu/files/69478494/download?download_frd=1">Online kmeans</a>
+                                <a href="https://bcourses.berkeley.edu/files/69478494/download?download_frd=1">3 Online kmeans</a>
                             </li>
                             <li>
-                                <a href="https://bcourses.berkeley.edu/files/69478492/download?download_frd=1">DBSCAN</a>
+                                <a href="https://bcourses.berkeley.edu/files/69478492/download?download_frd=1">3 DBSCAN</a>
                             </li>
+
+                            <li>
+                                <a href="https://bcourses.berkeley.edu/files/69478519/download?download_frd=1">4 Dimension Redudction</a>
+                            </li>
+
                         </ul>
                     </h4>
                     <div class="w3-padding-8"></div>
