--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
                         <tr>
                             <td>6</td>
-                            <td>Spatial databases II</td>
+                            <td>Spatial databases II, GIS and web mapping</td>
                             <td>Data Handling</td>
                             <td>
                                 <a href="https://bcourses.berkeley.edu/files/69478491/download?download_frd=1">Slides</a>
@@ -180,8 +180,11 @@
 
                         <tr>
                             <td>7</td>
-                            <td>GIS and web mapping</td>
+                            <td>From Spatial Database to Data Mining</td>
                             <td>Data Handling</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478490/download?download_frd=1">Slides</a>
+                            </td>
                         </tr>
 
                         <tr>
@@ -380,57 +383,70 @@
                                 <a href="https://bcourses.berkeley.edu/files/69631773/download?download_frd=1">Querying Examples</a>,
                                 <a href="https://bcourses.berkeley.edu/files/69478535/download?download_frd=1">Shapely</a>
                             </td>
-                            <td></tr>
-                        </table>
-                    </h4>
+                        </tr>
 
-                    <div class="w3-padding-8"></div>
-                    <h2 class="w3-text-grey">Extra Readings</h2>
-                    <h4>
-                        <ul>
-                            <li>
-                                <a href="https://bcourses.berkeley.edu/files/69478508/download?download_frd=1">3 Fask kmeans</a>
-                            </li>
-                            <li>
-                                <a href="https://bcourses.berkeley.edu/files/69478494/download?download_frd=1">3 Online kmeans</a>
-                            </li>
-                            <li>
-                                <a href="https://bcourses.berkeley.edu/files/69478492/download?download_frd=1">3 DBSCAN</a>
-                            </li>
+                        <tr>
+                            <td>7</td>
+                            <td>From Spatial Database to Data Mining</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69664291/download?download_frd=1">KD-Tree</a>,
+                                <a href="https://bcourses.berkeley.edu/files/69665091/download?download_frd=1">Decision Tree</a>
+                            </td>
 
-                            <li>
-                                <a href="https://bcourses.berkeley.edu/files/69478519/download?download_frd=1">4 Dimension Redudction</a>
-                            </li>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478489/download?download_frd=1">Spam Dataset</a>
+                            </td>
+                        </tr>
+                    </table>
+                </h4>
 
-                        </ul>
-                    </h4>
-                    <div class="w3-padding-8"></div>
-                    <h2 class="w3-text-grey">Course Grading</h2>
+                <div class="w3-padding-8"></div>
+                <h2 class="w3-text-grey">Extra Readings</h2>
+                <h4>
+                    <ul>
+                        <li>
+                            <a href="https://bcourses.berkeley.edu/files/69478508/download?download_frd=1">3 Fask kmeans</a>
+                        </li>
+                        <li>
+                            <a href="https://bcourses.berkeley.edu/files/69478494/download?download_frd=1">3 Online kmeans</a>
+                        </li>
+                        <li>
+                            <a href="https://bcourses.berkeley.edu/files/69478492/download?download_frd=1">3 DBSCAN</a>
+                        </li>
 
-                    <h4>1 or 2 Midterms :
-                        <b>30%</b>
-                    </h4>
-                    <h4>Homework :
-                        <b>50%</b>
-                    </h4>
-                    <h4>Final Project :
-                        <b>20%</b>
-                    </h4>
-                </div>
+                        <li>
+                            <a href="https://bcourses.berkeley.edu/files/69478519/download?download_frd=1">4 Dimension Redudction</a>
+                        </li>
+
+                    </ul>
+                </h4>
+                <div class="w3-padding-8"></div>
+                <h2 class="w3-text-grey">Course Grading</h2>
+
+                <h4>1 or 2 Midterms :
+                    <b>30%</b>
+                </h4>
+                <h4>Homework :
+                    <b>50%</b>
+                </h4>
+                <h4>Final Project :
+                    <b>20%</b>
+                </h4>
             </div>
         </div>
+    </div>
 
-        <!-- Footer -->
-        <div class="w3-container w3-black w3-center w3-opacity w3-padding-32"></div>
+    <!-- Footer -->
+    <div class="w3-container w3-black w3-center w3-opacity w3-padding-32"></div>
 
-        <!-- Footer -->
+    <!-- Footer -->
 
-        <script>
-            // Used to toggle the menu on small screens when clicking on the menu button function myFunction() {     var x = document.getElementById("navDemo");     if (x.className.indexOf("w3-show") == -1) {         x.className += " w3-show";     } else {
-            // x.className = x.className.replace(" w3-show", "");     } }
-        </script>
+    <script>
+        // Used to toggle the menu on small screens when clicking on the menu button function myFunction() {     var x = document.getElementById("navDemo");     if (x.className.indexOf("w3-show") == -1) {         x.className += " w3-show";     } else {
+        // x.className = x.className.replace(" w3-show", "");     } }
+    </script>
 
-    </body>
+</body>
 </html>
 </li>
 </script>
