Added lecture 8 examples.

--- a/index.html
+++ b/index.html
@@ -390,11 +390,20 @@
                             <td>From Spatial Database to Data Mining</td>
                             <td>
                                 <a href="https://bcourses.berkeley.edu/files/69664291/download?download_frd=1">KD-Tree</a>,
-                                <a href="https://bcourses.berkeley.edu/files/69665091/download?download_frd=1">Decision Tree</a>
+                                <a href="https://bcourses.berkeley.edu/files/69684156/download?download_frd=1">Decision Tree</a>
                             </td>
 
                             <td>
                                 <a href="https://bcourses.berkeley.edu/files/69478489/download?download_frd=1">Spam Dataset</a>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>8</td>
+                            <td>Trajectories</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69684314/download?download_frd=1">DTW</a>,
+                                <a href="https://bcourses.berkeley.edu/files/69684315/download?download_frd=1">Freshet Distance</a>
                             </td>
                         </tr>
                     </table>
