Added lecture 9 and 10 slides.

--- a/index.html
+++ b/index.html
@@ -189,20 +189,29 @@
 
                         <tr>
                             <td>8</td>
-                            <td>Trajectories and map matching</td>
+                            <td>Spatial Data Mining Overview</td>
                             <td>Data Processing</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478561/download?download_frd=1">Slides</a>
+                            </td>
                         </tr>
 
                         <tr>
                             <td>9</td>
-                            <td>Map matching and reconstruction</td>
+                            <td>Trajectories and Map Matching</td>
                             <td>Data Processing</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478577/download?download_frd=1">Slides</a>
+                            </td>
                         </tr>
 
                         <tr>
                             <td>10</td>
-                            <td>Point Pattern Analysis</td>
+                            <td>Map Matching and Reconstruction</td>
                             <td>Spatial Statistics</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478554/download?download_frd=1">Slides</a>
+                            </td>
                         </tr>
 
                         <tr>
@@ -404,6 +413,14 @@
                             <td>
                                 <a href="https://bcourses.berkeley.edu/files/69684314/download?download_frd=1">DTW</a>,
                                 <a href="https://bcourses.berkeley.edu/files/69684315/download?download_frd=1">Freshet Distance</a>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>9</td>
+                            <td>Trajectories and Map Matching</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478464/download?download_frd=1">Kalman Filter</a>
                             </td>
                         </tr>
                     </table>
