Added map matching example.

--- a/index.html
+++ b/index.html
@@ -423,6 +423,13 @@
                                 <a href="https://bcourses.berkeley.edu/files/69478464/download?download_frd=1">Kalman Filter</a>
                             </td>
                         </tr>
+                        <tr>
+                            <td>10</td>
+                            <td>Trajectories and Map Matching</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69736245/download?download_frd=1">Map Maptching</a>
+                            </td>
+                        </tr>
                     </table>
                 </h4>
 
