Lecture 11 and example.s

--- a/index.html
+++ b/index.html
@@ -216,8 +216,11 @@
 
                         <tr>
                             <td>11</td>
-                            <td>Geostatistics</td>
+                            <td>Point Pattern Analysis</td>
                             <td>Spatial Statistics</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478463/download?download_frd=1">Slides</a>
+                            </td>
                         </tr>
 
                         <tr>
@@ -428,6 +431,16 @@
                             <td>Trajectories and Map Matching</td>
                             <td>
                                 <a href="https://bcourses.berkeley.edu/files/69736245/download?download_frd=1">Map Maptching</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>11</td>
+                            <td>Point Pattern Analysis</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478500/download?download_frd=1">Histogrames vs. KDE</a>,
+                                <a href="https://bcourses.berkeley.edu/files/69478552/download?download_frd=1">KDE 1D</a>,
+                                <a href="https://bcourses.berkeley.edu/files/69478553/download?download_frd=1">KDE 2D</a>,
+                                <a href="https://bcourses.berkeley.edu/files/69478501/download?download_frd=1">KDEBench</a>
                             </td>
                         </tr>
                     </table>
