Mini competition and Lecture 12.

--- a/index.html
+++ b/index.html
@@ -225,8 +225,11 @@
 
                         <tr>
                             <td>12</td>
-                            <td>Spatial Regression</td>
+                            <td>Geostatistics</td>
                             <td>Spatial Statistics</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478551/download?download_frd=1">Slides</a>
+                            </td>
                         </tr>
 
                         <tr>
@@ -338,7 +341,6 @@
                         <tr>
                             <th>Homework Problems</th>
                             <th>Data Files</th>
-                            <!-- <th>Due Date</th> -->
                         </tr>
                         <tr>
                             <td>
@@ -347,7 +349,12 @@
                             <td>
                                 <a href="https://bcourses.berkeley.edu/files/69478496/download?download_frd=1">Data File</a>
                             </td>
-                            <!-- <td>Set. 15</td> -->
+
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69666487/download?download_frd=1">Homework 2</a>
+                            </td>
                         </tr>
                     </table>
                 </h4>
@@ -441,6 +448,16 @@
                                 <a href="https://bcourses.berkeley.edu/files/69478552/download?download_frd=1">KDE 1D</a>,
                                 <a href="https://bcourses.berkeley.edu/files/69478553/download?download_frd=1">KDE 2D</a>,
                                 <a href="https://bcourses.berkeley.edu/files/69478501/download?download_frd=1">KDEBench</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>Mini Competition</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69815464/download?download_frd=1">Random Forest Example</a>
+                            </td>
+                            <td>
+                                <a href="https://inclass.kaggle.com/c/ce-263n-mini-competition">Kaggle Link</a>
                             </td>
                         </tr>
                     </table>
