Added lecture 13, 14, 15. Examples for lecture 13 and 15.

--- a/index.html
+++ b/index.html
@@ -236,18 +236,27 @@
                             <td>13</td>
                             <td>Geographically weighted models</td>
                             <td>Spatial Statistics</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478583/download?download_frd=1">Slides</a>
+                            </td>
                         </tr>
 
                         <tr>
                             <td>14</td>
                             <td>Intro to ML, model selection</td>
                             <td>ML discriminative</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478539/download?download_frd=1">Slides</a>
+                            </td>
                         </tr>
 
                         <tr>
                             <td>15</td>
                             <td>Locally linear models</td>
                             <td>ML discriminative</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478581/download?download_frd=1">Slides</a>
+                            </td>
                         </tr>
 
                         <tr>
@@ -460,6 +469,25 @@
                                 <a href="https://inclass.kaggle.com/c/ce-263n-mini-competition">Kaggle Link</a>
                             </td>
                         </tr>
+
+                        <tr>
+                            <td>13</td>
+                            <td>Geographically weighted models</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478524/download?download_frd=1">Spatial Regression</a>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>15</td>
+                            <td>Locally linear models</td>
+                            <td>
+                                <a href="https://bcourses.berkeley.edu/files/69478550/download?download_frd=1">Local Linear Regression</a>,
+                                <a href="https://bcourses.berkeley.edu/files/69478550/download?download_frd=1">NW Regression</a>
+                            </td>
+
+                        </tr>
+
                     </table>
                 </h4>
 
